--- a/translation/de.json
+++ b/translation/de.json
@@ -1,97 +1,76 @@
 {
-  "abort": {},
-  "error": {
-    "name_exists": "Ein Wechselrichter mit diesem Namen existiert bereits."
-  },
   "config": {
     "step": {
-      "inverters_add": {
-        "title": "Wechselrichter hinzufügen",
-        "description": "Konfigurieren Sie Ihre Solar-Wechselrichter-Einstellungen.",
+      "user": {
+        "title": "PV-Vorhersage einrichten",
+        "description": "Wählen Sie Ihre Home Assistant-Zone oder den Standortnamen.",
         "data": {
-          "name": "Wechselrichter-Name",
-          "size_w": "DC-Nennleistung (W)",
-          "max_ac_w": "Max. AC-Ausgang (W)",
-          "inverter_eff": "Wechselrichter-Wirkungsgrad"
+          "location_name": "Standortname"
         }
       },
-      "inverters_menu": {
-        "title": "Wechselrichter-Konfiguration",
-        "description": "Fügen Sie einen weiteren Wechselrichter hinzu oder fahren Sie mit den Panel-Strings fort.",
-        "menu_options": {
-          "add_another": "Weiteren Wechselrichter hinzufügen",
-          "done": "Weiter zu Panel-Strings"
+      "inverters_add": {
+        "title": "Wechselrichter hinzufügen",
+        "description": "Konfigurieren Sie die Parameter Ihres Wechselrichters.",
+        "data": {
+          "name": "Wechselrichter-Name",
+          "size_w": "Wechselrichter-Leistung (W)",
+          "max_ac_w": "Max. AC-Ausgang (W)",
+          "inverter_eff": "Wirkungsgrad (0.0 - 1.0)"
         }
       },
       "strings_add": {
-        "title": "Panel-String hinzufügen",
-        "description": "Konfigurieren Sie die Ausrichtung und Spezifikationen Ihres Solar-Panel-Strings.",
+        "title": "PV-String hinzufügen",
+        "description": "Konfigurieren Sie einen PV-String für dieses System.",
         "data": {
-          "azimuth": "Azimut (Grad)",
-          "tilt": "Neigungswinkel (Grad)",
-          "power_w": "String-Leistung (W)",
-          "albedo": "Bodenreflexion (Albedo)",
-          "cell_coeff": "Temperaturkoeffizient (%/°C)"
-        }
-      },
-      "strings_menu": {
-        "title": "Panel-String-Konfiguration",
-        "description": "Fügen Sie einen weiteren Panel-String hinzu oder beenden Sie die Einrichtung.",
-        "menu_options": {
-          "add_another": "Weiteren String hinzufügen",
-          "done": "Einrichtung abschließen"
+          "azimuth": "Ausrichtung (°)",
+          "tilt": "Neigungswinkel (°)",
+          "power_w": "PV-String-Leistung (Wp)",
+          "albedo": "Albedo (Reflexion)",
+          "cell_coeff": "Temperaturkoeffizient"
         }
       }
+    },
+    "error": {
+      "name_exists": "Dieser Name wird bereits verwendet."
     }
   },
   "options": {
     "step": {
       "init": {
-        "title": "PV-Prognose konfigurieren",
-        "description": "Bearbeiten Sie Ihre Solar-System-Konfiguration.",
-        "menu_options": {
-          "edit_inverters": "Wechselrichter bearbeiten",
-          "edit_strings": "Panel-Strings bearbeiten",
-          "done": "Änderungen speichern"
+        "title": "PV-Vorhersage konfigurieren",
+        "description": "Fügen Sie jetzt Wechselrichter und PV-Strings hinzu oder bearbeiten Sie sie.",
+        "data": {
+          "menu_option": "Was möchten Sie tun?"
         }
       },
       "inverters_edit": {
-        "title": "Wechselrichter verwalten",
-        "description": "Fügen Sie Wechselrichter hinzu, bearbeiten oder entfernen Sie sie aus Ihrem System.",
-        "menu_options": {
-          "add_inverter": "Neuen Wechselrichter hinzufügen",
-          "back": "Zurück zum Hauptmenü"
-        }
-      },
-      "inverters_add": {
-        "title": "Wechselrichter hinzufügen",
-        "description": "Konfigurieren Sie einen neuen Solar-Wechselrichter.",
+        "title": "Wechselrichter bearbeiten",
         "data": {
-          "name": "Wechselrichter-Name",
-          "size_w": "DC-Nennleistung (W)",
-          "max_ac_w": "Max. AC-Ausgang (W)",
-          "inverter_eff": "Wechselrichter-Wirkungsgrad"
+          "menu_option": "Wählen Sie einen Wechselrichter oder fügen Sie einen neuen hinzu"
         }
       },
       "strings_edit": {
-        "title": "Panel-Strings verwalten",
-        "description": "Fügen Sie Panel-Strings hinzu, bearbeiten oder entfernen Sie sie aus Ihrem System.",
-        "menu_options": {
-          "add_string": "Neuen String hinzufügen",
-          "back": "Zurück zum Hauptmenü"
+        "title": "PV-Strings bearbeiten",
+        "data": {
+          "menu_option": "Wählen Sie einen String oder fügen Sie einen neuen hinzu"
         }
       },
+      "inverters_add": {
+        "title": "Wechselrichter hinzufügen"
+      },
       "strings_add": {
-        "title": "Panel-String hinzufügen",
-        "description": "Konfigurieren Sie einen neuen Solar-Panel-String.",
-        "data": {
-          "azimuth": "Azimut (Grad)",
-          "tilt": "Neigungswinkel (Grad)",
-          "power_w": "String-Leistung (W)",
-          "albedo": "Bodenreflexion (Albedo)",
-          "cell_coeff": "Temperaturkoeffizient (%/°C)"
-        }
+        "title": "String hinzufügen"
       }
+    },
+    "menu": {
+      "edit_inverters": "Wechselrichter bearbeiten",
+      "edit_strings": "PV-Strings bearbeiten",
+      "done": "Fertig",
+      "add_inverter": "➕ Wechselrichter hinzufügen",
+      "add_string": "➕ PV-String hinzufügen",
+      "back": "⬅️ Zurück",
+      "edit": "✏️ Bearbeiten",
+      "delete": "🗑️ Löschen"
     }
   }
 }
