--- a/translation/en.json
+++ b/translation/en.json
@@ -1,97 +1,76 @@
 {
-  "abort": {},
-  "error": {
-    "name_exists": "An inverter with this name already exists."
-  },
   "config": {
     "step": {
-      "inverters_add": {
-        "title": "Add Inverter",
-        "description": "Configure your solar inverter settings.",
+      "user": {
+        "title": "Set up PV Forecast",
+        "description": "Choose your Home Assistant zone or location name.",
         "data": {
-          "name": "Inverter Name",
-          "size_w": "DC Power Rating (W)",
-          "max_ac_w": "Max AC Output (W)",
-          "inverter_eff": "Inverter Efficiency"
+          "location_name": "Location Name"
         }
       },
-      "inverters_menu": {
-        "title": "Inverter Configuration",
-        "description": "Add another inverter or continue to panel strings.",
-        "menu_options": {
-          "add_another": "Add Another Inverter",
-          "done": "Continue to Panel Strings"
+      "inverters_add": {
+        "title": "Add Inverter",
+        "description": "Configure the parameters of your solar inverter.",
+        "data": {
+          "name": "Inverter Name",
+          "size_w": "Inverter Size (W)",
+          "max_ac_w": "Max AC Output (W)",
+          "inverter_eff": "Efficiency (0.0 - 1.0)"
         }
       },
       "strings_add": {
-        "title": "Add Panel String",
-        "description": "Configure your solar panel string orientation and specifications.",
+        "title": "Add PV String",
+        "description": "Configure one PV string for this system.",
         "data": {
-          "azimuth": "Azimuth (degrees)",
-          "tilt": "Tilt Angle (degrees)",
-          "power_w": "String Power (W)",
-          "albedo": "Ground Reflectance (Albedo)",
-          "cell_coeff": "Temperature Coefficient (%/°C)"
-        }
-      },
-      "strings_menu": {
-        "title": "Panel String Configuration",
-        "description": "Add another panel string or finish setup.",
-        "menu_options": {
-          "add_another": "Add Another String",
-          "done": "Finish Setup"
+          "azimuth": "Azimuth (°)",
+          "tilt": "Tilt Angle (°)",
+          "power_w": "PV String Power (Wp)",
+          "albedo": "Albedo (Reflectivity)",
+          "cell_coeff": "Temperature Coefficient"
         }
       }
+    },
+    "error": {
+      "name_exists": "This name is already in use."
     }
   },
   "options": {
     "step": {
       "init": {
         "title": "Configure PV Forecast",
-        "description": "Edit your solar system configuration.",
-        "menu_options": {
-          "edit_inverters": "Edit Inverters",
-          "edit_strings": "Edit Panel Strings",
-          "done": "Save Changes"
+        "description": "You can now add or update inverters and PV strings.",
+        "data": {
+          "menu_option": "What would you like to do?"
         }
       },
       "inverters_edit": {
-        "title": "Manage Inverters",
-        "description": "Add, edit, or remove inverters from your system.",
-        "menu_options": {
-          "add_inverter": "Add New Inverter",
-          "back": "Back to Main Menu"
-        }
-      },
-      "inverters_add": {
-        "title": "Add Inverter",
-        "description": "Configure a new solar inverter.",
+        "title": "Edit Inverters",
         "data": {
-          "name": "Inverter Name",
-          "size_w": "DC Power Rating (W)",
-          "max_ac_w": "Max AC Output (W)",
-          "inverter_eff": "Inverter Efficiency"
+          "menu_option": "Choose an inverter to edit or add a new one"
         }
       },
       "strings_edit": {
-        "title": "Manage Panel Strings",
-        "description": "Add, edit, or remove panel strings from your system.",
-        "menu_options": {
-          "add_string": "Add New String",
-          "back": "Back to Main Menu"
+        "title": "Edit PV Strings",
+        "data": {
+          "menu_option": "Choose a string to edit or add a new one"
         }
       },
+      "inverters_add": {
+        "title": "Add Inverter"
+      },
       "strings_add": {
-        "title": "Add Panel String",
-        "description": "Configure a new solar panel string.",
-        "data": {
-          "azimuth": "Azimuth (degrees)",
-          "tilt": "Tilt Angle (degrees)",
-          "power_w": "String Power (W)",
-          "albedo": "Ground Reflectance (Albedo)",
-          "cell_coeff": "Temperature Coefficient (%/°C)"
-        }
+        "title": "Add String"
       }
+    },
+    "menu": {
+      "edit_inverters": "Edit Inverters",
+      "edit_strings": "Edit PV Strings",
+      "done": "Done",
+      "add_inverter": "➕ Add Inverter",
+      "add_string": "➕ Add PV String",
+      "back": "⬅️ Back",
+      "edit": "✏️ Edit",
+      "delete": "🗑️ Delete"
     }
   }
 }
